--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
-.body {
+body {
     margin: 0;
     padding-top: 800px;
+    text-align: center;
 }
 
 #TBL {
@@ -67,4 +68,12 @@
 .links:hover {
     background-color:dodgerblue; 
 }
-    
+a{
+    text-decoration: none;
+}    
+.article:hover {
+    color:darkorchid;
+}
+html{
+scroll-behavior:smooth;     
+}
